# guepard

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yaml  quality-checks.yaml
AISTATS_experiments/figures/: Figure_2-4_banana.ipynb  Figure_2-4_banana.md  Figure_3_accuracy_vs_testsize.ipynb  Figure_3_accuracy_vs_testsize.md  Figure_5_synthetic_data.ipynb  Figure_5_synthetic_data.md
AISTATS_experiments/figures/additional_experiments/: efficient_SVGP_param_conjugate.ipynb  efficient_SVGP_param_conjugate.md
AISTATS_experiments/tables/susy/: data.py  main.py
AISTATS_experiments/tables/uci_regression/: read_results.py  requirements.txt  utils.py
docs/: conf.py  developer.md  index.rst  installation.md  requirements.txt
docs/notebooks/: SVGP_initialisation.ipynb  equivalent_obs_GPR_ensembles.ipynb  equivalent_obs_GPR_ensembles.md  equivalent_obs_SVGP_ensembles.ipynb  equivalent_obs_SVGP_ensembles.md  equivalent_obs_SVGP_initialisation.ipynb  equivalent_obs_SVGP_parametrisation.ipynb  explaining_equivalent_obs.ipynb  explaining_equivalent_obs.md  howto.md  merging_GP_submodels.ipynb  merging_GP_submodels.md  sparseSVGP.ipynb  sparseSVGP.md
experiments/susy/: README.md  data.py  main.py  read_results.py
experiments/uci_regression/: create_commands.py  main.py  model.py  models.py  read_results.py  sklearn_models.py
guepard/: __init__.py  base.py  baselines.py  equivalentobs.py  gpr.py  gpr_submodels.py  papl.py  sparse.py  sparseSVGP.py  utilities.py
notebooks/: Figure_2-4_banana.ipynb  Figure_2-4_banana.md  Figure_3_accuracy_vs_testsize.ipynb  Figure_3_accuracy_vs_testsize.md  Figure_5_synthetic_data.ipynb  Figure_5_synthetic_data.md  Merging GP submodels.ipynb  acc_vs_q.py  accuracy_vs_num_submodels.py  accuracy_vs_testsize.py  baselines.py  efficient_SVGP_param_conjugate.ipynb  efficient_SVGP_param_non_conjugate.py  equivalent_obs_SVGP_initialisation.ipynb  experiment_synthetic_data.ipynb  experiment_synthetic_data_plots.ipynb  figures_paper.ipynb  papl-gpr.ipynb  papl-gpr.py  papl-svgp.ipynb  sparse.py  toy_example_sparse_guepard.py
notebooks/additional_experiments/: efficient_SVGP_param_non_conjugate.ipynb  efficient_SVGP_param_non_conjugate.md
notebooks/data/: synthetic-d_5-n_16384-p_1024-nrep_5.npz
papl/: GPR_submodels.py  __init__.py  gpr_submodels.py  papl.py
tests/: test_baselines.py  test_equivalentobs.py  test_gpr.py  test_papl.py  test_sparse.py  test_sparseSVGP.py  test_utilities.py
