[tool.poetry]
name = "papl"
version = "0.1.0"
description = ""
authors = ["Nicolas Durrande"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
gpflow = "^2.2.1"
gpflux = "^0.2.3"
matplotlib = "^3.3.3"
jupyterlab = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
