[tool.poetry]
packages = [{include = "guepard", from = "."}]
name = "guepard"
version = "0.1.0"
description = "Divide-and-Conquer Gaussian Process Ensemble Method"
authors = ["Nicolas Durrande", "Vincent Dutordoir"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7,<3.11"
tensorflow = {version = "2.8.*", markers = "platform_system!='Darwin' or platform_machine!='arm64'"}
tensorflow-macos = {version = "2.8.*", markers = "platform_system=='Darwin' and platform_machine=='arm64'"}
gpflow = { git = "https://github.com/GPflow/GPflow.git", branch = "develop" }
matplotlib = "^3.3.3"
tensorflow-probability = "<=0.13"
protobuf = "3.19.0"
gpflux = { git = "https://github.com/secondmind-labs/GPflux.git", branch = "develop" }
tqdm = "^4.0.0" 

[tool.poetry.dev-dependencies]
taskipy = "^1.2.0"
black = "^22.1.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^7.0.1"
jupyterlab = "^3.3.1"
mypy = "^0.961"
jupytext = "^1.14.0"
pre-commit = "^2.20.0"

[tool.taskipy.tasks]
format = "make format"
check = "make check"
test = "make test"
build-docs = "cd docs; make html"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black" 
known_gpflow = "gpflow"
sections = "FUTURE,STDLIB,THIRDPARTY,GPFLOW,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"